add real build job.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,16 @@ jobs:
           name: The First Step
           command: |
             echo 'Hello World!'
-            echo 'This is the delivery pipeline' 
+            echo 'This is the delivery pipeline'
+  real-build:
+    docker:
+      - image: cimg/base:2021.04
+    steps:
+      - checkout
+      - run:
+          name: make
+          command: make main
+      - run:
+          name: run
+          command: ./main
+  
